# rust

./: .gitignore  Cargo.toml  README.md
file_encryptor/: Cargo.toml  README.md  test.txt
file_encryptor/src/: main.rs
ray_tracer/: Cargo.toml  output.ppm
ray_tracer/src/: main.rs
simple_server/: Cargo.toml
simple_server/src/: main.rs
simple_server/static/: index.html
src/: main.rs
task_manager/: Cargo.toml  README.md
task_manager/src/: main.rs
