[package]
name = "task_manager"
version = "0.1.0"
edition = "2021"
authors = ["Task Manager Developer"]
description = "A simple command-line task manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
